--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -39,6 +39,7 @@
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "subjects", :template => "subrecord_subject"} %>
 
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "external_documents"} %>
+<%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "external_ids", :hidden => true} %>
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "rights_statements"} %>
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "instances", :custom_action_template => "instances/subrecord_form_action"} %>
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "deaccessions"} %>
