--- a/frontend/app/views/archival_objects/_rde.html.erb
+++ b/frontend/app/views/archival_objects/_rde.html.erb
@@ -334,13 +334,19 @@
             </div>
           </div>
         </p>
-        <div class="row">
-          <div class="well span12">
-            <div class="span5">
+        <div class="well">
+          <div class="row">
+            <div class="span6">
               <%= I18n.t("rde.help.keyboard_shortcuts") %>
+              <br/>
+              <%= I18n.t("rde.help.fill_column") %>
             </div>
             <div class="span6">
               <%= I18n.t("rde.help.sticky_columns") %>
+              <br/>
+              <%= I18n.t("rde.help.resize_and_reorder_columns") %>
+              <br/>
+              <%= I18n.t("rde.help.reset") %>
             </div>
           </div>
         </div>
