show the user a list of links upon import completion

--- a/frontend/app/views/import/_streaming_status_script.html.erb
+++ b/frontend/app/views/import/_streaming_status_script.html.erb
@@ -29,7 +29,10 @@ function handleUpdate(update, emitter) {
   if (update.saved) {
     var saved = update.saved;
     emitter.show_saved(update.saved);
+  }
 
+  if (update.links) {
+    emitter.show_links(update.links);
   }
 }
 
