Allow toggle of inline RDE error messages Also tweak the scrollto plugin to only scroll on a particular axis if defined.

--- a/frontend/app/assets/stylesheets/archivesspace/rde.less
+++ b/frontend/app/assets/stylesheets/archivesspace/rde.less
@@ -181,9 +181,12 @@
     td {
       background-color: #d5effa;
     }
-
-    .error-summary {
-      display: block;
+  }
+  .show-inline-errors {
+    .last-focused {
+      .error-summary {
+        display: block;
+      }
     }
   }
 }
