--- a/frontend/app/views/archival_objects/_rde.html.erb
+++ b/frontend/app/views/archival_objects/_rde.html.erb
@@ -170,6 +170,9 @@
             <button class="btn btn-small fill-column"><%= I18n.t("rde.actions.fill_toggle") %></button>
             <button class="btn btn-small reorder-columns"><%= I18n.t("rde.actions.reorder_toggle") %></button>
           </div>
+
+          <button class="btn btn-small toggle-inline-errors active"><%= I18n.t("rde.actions.inline_errors_toggle") %></button>
+
           <a href="#" id="rde_reset" class="btn btn-small"><%= I18n.t("rde.actions.reset") %></a>
         </p>
 
