Fix notes error messages without a field label; And allow keyboard 'return' to invoke buttons

--- a/frontend/app/views/archival_objects/_rde.html.erb
+++ b/frontend/app/views/archival_objects/_rde.html.erb
@@ -103,6 +103,9 @@
         <% form.push("content", begin archival_object["content"] || [] rescue [] end) do %>
           <span id="<%= form.id_for(nil) %>"></span>
         <% end %>
+        <% form.push(form.set_index("subnotes[]", 0), []) do %>
+          <span id="<%= form.id_for("content") %>"></span>
+        <% end %>
       <% end %>
     </td>
     <td class="control-group">
@@ -119,6 +122,9 @@
         <% form.push("content", begin archival_object["content"] || [] rescue [] end) do %>
           <span id="<%= form.id_for(nil) %>"></span>
         <% end %>
+        <% form.push(form.set_index("subnotes[]", 0), []) do %>
+          <span id="<%= form.id_for("content") %>"></span>
+        <% end %>
       <% end %>
     </td>
     <td class="control-group">
@@ -134,6 +140,9 @@
         <% end %>
         <% form.push("content", begin archival_object["content"] || [] rescue [] end) do %>
           <span id="<%= form.id_for(nil) %>"></span>
+        <% end %>
+        <% form.push(form.set_index("subnotes[]", 0), []) do %>
+          <span id="<%= form.id_for("content") %>"></span>
         <% end %>
       <% end %>
     </td>
