Clean up inline error styles for the RDE form

--- a/frontend/app/views/archival_objects/_rde.html.erb
+++ b/frontend/app/views/archival_objects/_rde.html.erb
@@ -334,7 +334,8 @@
             <% end %>
           </tbody>
         </table>
-        <p>
+        <br/>
+        <div>
           <div class="btn-group">
             <button class="btn btn-small btn-success add-row"><%= I18n.t("rde.actions.add_row") %></button>
             <button class="btn btn-small btn-success dropdown-toggle add-rows-dropdown" data-toggle="dropdown">
@@ -345,7 +346,8 @@
               <button class="btn btn-small input-medium btn-primary" type="button"><%= I18n.t("rde.actions.add_rows") %></button>
             </div>
           </div>
-        </p>
+        </div>
+        <br/>
         <div class="well">
           <div class="row">
             <div class="span6">
