--- a/frontend/app/assets/stylesheets/archivesspace/rde.less
+++ b/frontend/app/assets/stylesheets/archivesspace/rde.less
@@ -141,18 +141,43 @@
   }
 
   .error-summary {
+    display: none;
     position: absolute;
-    padding: 10px;
     .opacity(90);
     z-index: 1;
-    box-shadow: 1px 1px 3px;
-    margin-top: 1em;
+    box-shadow: 1px 1px 3px @errorBorder;
     margin-left: -5px;
-    display: none;
     border-top: none;
-    .border-radius(0 0 4px 4px);
-
+    background-color: @errorBackground;
+    color: @errorText;
     padding-right: 14px;
+    max-width: none;
+    top: initial !important;
+
+    .hide-error-summary {
+      width: 100%;
+      text-align: center;
+      display: block;
+      margin-top: 5px;
+      border-top: 1px dotted #AAA;
+      .opacity(60);
+
+      &:hover {
+        .opacity(100);
+      }
+    }
+
+    .arrow, .hide-error-summary, .error {
+      display: none;
+    }
+
+    .arrow {
+      border-bottom-color: @errorBackground;
+
+      &:before, &:after {
+        border-bottom-color: @errorBackground;
+      }
+    }
 
     .error {
       position: relative;
@@ -182,10 +207,27 @@
       background-color: #d5effa;
     }
   }
+  .last-focused {
+    .error-summary {
+      display: block;
+      padding: 0 4px;
+      margin-top: 1.1em;
+      .border-radius(0 0 4px 4px);
+    }
+  }
   .show-inline-errors {
     .last-focused {
       .error-summary {
-        display: block;
+        padding: 10px;
+        margin-top: 1.75em;
+        .border-radius(4px);
+
+        .arrow, .hide-error-summary, .error {
+          display: block;
+        }
+        .show-error-summary {
+          display: none;
+        }
       }
     }
   }
