--- a/public/app/views/search/results.html.erb
+++ b/public/app/views/search/results.html.erb
@@ -24,7 +24,7 @@
                 <% if result["primary_type"] === "subject" %>
                   <%= link_to result["title"], {"filter_term" => @search_data.facet_query_string("subjects", result["title"])} %>
                 <% elsif ["agent_person", "agent_software", "agent_family", "agent_corporate_entity"].include?(result["primary_type"]) %>
-                  <%= link_to result["title"], {"filter_term" => @search_data.facet_query_string("agents", result["title"])} %>
+                  <%= link_to result['title'], :controller => :records, :action => :agent, :id => id, :agent_type => result["primary_type"] %>
                 <% elsif result["primary_type"] === "repository" %>
                   <%= link_to result['title'], :controller => :search, :action => :repository, :repo_id => id %>
                 <% else %>
