Squashed commit of the following:
commit 7265255f468a246cdd143791b2adfb06e913323e
Author: Payten Giles <payten.giles@gmail.com>
Date:   Thu Dec 5 15:47:57 2013 +1100

    WIP Only allow selection of files once an upload type has been chosen

commit 3b810e2fdf21205cfc60c883fbbda90e18c14574
Author: Payten Giles <payten.giles@gmail.com>
Date:   Wed Dec 4 16:15:37 2013 +1100

    WIP Add basic upload of multiple files to a stub jobs form

commit a1c54bf249c8e0d1750bf7ce5f151fcc431d3a87
Author: Payten Giles <payten.giles@gmail.com>
Date:   Wed Dec 4 08:29:07 2013 +1100

    WIP multiple file uploads and jobs

--- a/frontend/app/assets/stylesheets/archivesspace.less
+++ b/frontend/app/assets/stylesheets/archivesspace.less
@@ -17,6 +17,7 @@
 @import "archivesspace/tables";
 @import "archivesspace/tree";
 @import "archivesspace/notes";
+@import "archivesspace/jobs";
 @import "datepicker";
 @import "combobox";
 @import "../../codemirror/codemirror.css";
