Fix RDE selenium test failing sometimes (due to ajax overriding dom as elements were tested

--- a/frontend/app/views/archival_objects/_rde.html.erb
+++ b/frontend/app/views/archival_objects/_rde.html.erb
@@ -4,7 +4,7 @@
     <td class="status">
       <span class="icon-exclamation-sign invalid"></span>
       <span class="icon-ok valid"></span>
-      <div class="error-summary">
+      <div class="error-summary hide">
         <div class="error-summary-header">
           <span class="error-summary-header-text"><%= I18n.t("rde.messages.error_summary_header") %></span>
           <a href="javascript:void(0);" class="hide-error-summary"><span class='icon icon-chevron-up'></span></a>
