Add import jobs link to the frontend navbar

--- a/frontend/app/views/shared/_header_repository.html.erb
+++ b/frontend/app/views/shared/_header_repository.html.erb
@@ -71,21 +71,6 @@
                 </ul>
               </li>
             <% end %>
-            <% if user_can?('update_archival_record') %>
-              <li class="dropdown import-container">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= I18n.t("navbar.import") %> <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <% if false %>
-                    <li><%= link_to I18n.t("navbar.import_eac"), :controller => :import, :action => :index, :importer => :eac %></li>
-                  <% end %>
-                  <li><%= link_to I18n.t("navbar.import_ead"), :controller => :import, :action => :index, :importer => :ead %></li>
-                  <li><%= link_to I18n.t("navbar.import_marcxml"), :controller => :import, :action => :index, :importer => :marcxml %></li>
-                  <li><%= link_to I18n.t("navbar.import_marcxml_subjects_and_agents"), :controller => :import, :action => :index, :importer => :marcxml_subjects_and_agents %></li>
-                  <li><%= link_to I18n.t("navbar.import_accession_csv"), :controller => :import, :action => :index, :importer => :accession_csv %></li>
-                  <li><%= link_to I18n.t("navbar.import_digital_object_csv"), :controller => :import, :action => :index, :importer => :digital_object_csv %></li>
-                </ul>
-              </li>
-            <% end %>
             <li>
               <%= form_tag(url_for(:controller => :search, :action => :do_search), :method => :get, :class => "navbar-form pull-left") do %>
                 <div class="input-append">
@@ -108,6 +93,10 @@
             </li>
           </ul>
           <ul class="nav pull-right">
+            <% if user_can?('update_archival_record') %>
+              <li><%= link_to I18n.t("job._plural"), :controller => :jobs, :action => :index %></li>
+            <% end %>
+
             <li><%= link_to I18n.t("navbar.list_reports"), :controller => :reports, :action => :index %></li>
 
             <% if Plugins.repository_menu_items? %>
