Clean up jobs frontend bits - listing and add basic show page

--- a/frontend/app/assets/stylesheets/archivesspace/jobs.less
+++ b/frontend/app/assets/stylesheets/archivesspace/jobs.less
@@ -1,3 +1,13 @@
+@import "variables";
+
+// Listing styles
+.table-import-jobs {
+  .filenames {
+    width: 40%;
+  }
+}
+
+// Form styles
 .fileinput-wrapper {
   height: 100px;
   border: 2px dashed #EEE;
