--- a/frontend/app/views/jobs/new.html.erb
+++ b/frontend/app/views/jobs/new.html.erb
@@ -38,6 +38,10 @@
             <div class="bar" style="width: 0;"></div>
           </div>
 
+          <div id="successMessage" class="alert alert-success" style="display: none">
+            Upload Successful. Redirecting to Job page...
+          </div>
+
           <div class="form-actions">
             <div class="btn-group">
               <button type="submit" class="btn btn-primary"><%= I18n.t("job._frontend.actions.save") %></button>
