Fix errored/failed message and styling

--- a/frontend/app/views/jobs/index.html.erb
+++ b/frontend/app/views/jobs/index.html.erb
@@ -26,7 +26,7 @@
         <%= render :partial => "shared/pagination" %>
       <% else %>
         <p class="alert alert-info">
-          No Import Jobs.
+          There are no archived import jobs.
         </p>
       <% end %>
     </div>
