Dynamically add a hide action to all alerts. If the sidebar link is clicked and errors are hidden, they are then displayed. Also allow sidebar links to propagate, so we can add multiple events to those links.

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -57,3 +57,23 @@ h2 > .label {
     }
   }
 }
+
+.alert {
+  &.with-hide-alert {
+    position: relative;
+  }
+  .hide-alert {
+    position: absolute;
+    top: 8px;
+    right: 10px;
+
+    .icon {
+      .opacity(25);
+    }
+    &:hover {
+      .icon {
+        .opacity(50);
+      }
+    }
+  }
+}
