--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -370,6 +370,8 @@ ul.subrecord-form-list {
 }
 
 .form-messages {
+  position: relative;
+
   .linked-to-field {
     cursor: pointer;
     .icon-chevron-down {
