added links in public where an index note item refers to the ref_id of an archival object

--- a/public/app/views/records/_notes.html.erb
+++ b/public/app/views/records/_notes.html.erb
@@ -76,7 +76,11 @@
   <dl>
     <% Array(note['items']).each do |index_item| %>
       <dt><%= index_item['value'] %></dt>
-      <dd><%= index_item['reference_text'] %></dd>
+      <% if index_item['reference_uri'] %>
+        <dd><a href="<%= index_item['reference_uri'] %>"><%= index_item['reference_text'] %></a></dd>
+      <% else %>
+        <dd><%= index_item['reference_text'] %></dd>
+      <% end %>
     <% end %>
   </dl>
 <% end %>
