Ooops change time_completed references to time_finished

--- a/frontend/app/views/jobs/_show_templates.html.erb
+++ b/frontend/app/views/jobs/_show_templates.html.erb
@@ -11,8 +11,8 @@
     <div class="controls label-only"><%= Time.parse(job.time_started).getlocal %></div>
   </div>
   <div class="control-group">
-    <label class="control-label"><%= I18n.t("job.time_completed") %></label>
-    <div class="controls label-only"><%= Time.parse(job.time_completed).getlocal %></div>
+    <label class="control-label"><%= I18n.t("job.time_finished") %></label>
+    <div class="controls label-only"><%= Time.parse(job.time_finished).getlocal %></div>
   </div>
 <% end %>
 
@@ -53,8 +53,8 @@
     <div class="controls label-only"><%= Time.parse(job.time_started).getlocal %></div>
   </div>
   <div class="control-group">
-    <label class="control-label"><%= I18n.t("job.time_completed") %></label>
-    <div class="controls label-only"><%= Time.parse(job.time_completed).getlocal %></div>
+    <label class="control-label"><%= I18n.t("job.time_finished") %></label>
+    <div class="controls label-only"><%= Time.parse(job.time_finished).getlocal %></div>
   </div>
 <% end %>
 
@@ -71,8 +71,8 @@
     <div class="controls label-only"><%= Time.parse(job.time_started).getlocal %></div>
   </div>
   <div class="control-group">
-    <label class="control-label"><%= I18n.t("job.time_completed") %></label>
-    <div class="controls label-only"><%= Time.parse(job.time_completed).getlocal %></div>
+    <label class="control-label"><%= I18n.t("job.time_finished") %></label>
+    <div class="controls label-only"><%= Time.parse(job.time_finished).getlocal %></div>
   </div>
 <% end %>
 
